--- a/style1.css
+++ b/style1.css
@@ -9,9 +9,9 @@
 }
 
 body {
+    overflow-y: scroll;
     height: 100vh;
-    width: 100%;
-    background: url("background.jpg") center/cover no-repeat;
+    width: 100%;    
 }
 
 header {
@@ -330,3 +330,17 @@ form button:hover {
         padding: 30px 20px;
     }
 }
+
+#video-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw; /* Set width to 100% of the viewport width */
+    height: 100vh; /* Set height to 100% of the viewport height */
+    z-index: -1;
+    object-fit: cover; /* Maintain aspect ratio and cover entire container */
+}
+
+
+
+
